--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity
+            android:name=".categoryListActivity"
+            android:label="@string/title_category_list"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".categoryDetailActivity"
+            android:label="@string/title_category_detail"
+            android:parentActivityName=".categoryListActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.upos.id.categoryListActivity" />
+        </activity>
         <activity
             android:name=".TransactionDetailActivity"
             android:label="@string/title_transaction_detail"
